# newsup-solar

./: .env.example  .gitignore  CODEBUDDY.md  COMMERCIAL_GUIDE.md  LICENSE  README.md  daily_chinese_news.py  install.sh  pyproject.toml  requirements.txt  test_commercial_keywords.py
config/: commercial_solar_keywords.py
scripts/: init_db.py
solarnews/: __init__.py  cli.py
src/: main.py
src/crawlers/: base.py  dynamic_crawler.py  pv_magazine.py  solar_power_world.py
src/crawlers/chinese/: __init__.py  bjx_guangfu.py  china_energy_news.py  china_pv.py  company_crawlers.py  ditan_crawler.py  in_en_crawler.py  nea_crawler.py  nengyuan_zazhi.py  ofweek_solar.py  pv_magazine_china.py  solarbe_crawler.py  solarzoom.py
src/crawlers/commercial/: pv_magazine_business.py  solar_power_world_commercial.py
src/processors/: classifier.py  cleaner.py  commercial_cleaner.py  rss_parser.py  smart_classifier.py  smart_summarizer.py
src/storage/: database.py
